# foxleys-rs-curve25519

./: .gitattributes  .releaserc.json  CHANGELOG.md  Cargo.toml  README.md  curve25519.cjs  index.d.ts  index.js  package.json
.github/workflows/: CI.yml  Semantic.yml
__test__/: curve25519.ts  index.spec.ts
benchmark/: bench.ts
src/: lib.rs
