
[package]
authors = ["Brother of Ijul"]
edition = "2024"
name    = "curve25519"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
curve25519-dalek = { version = "4.1.3", features = ["digest", "rand_core"] }
napi             = "3.0.0"
napi-derive      = "3.0.0"
sha2             = "0.10.9"
x25519-dalek     = { version = "2.0.1", features = ["getrandom", "static_secrets"] }
# rand_core        = { version = "0.9.3", features = ["os_rng"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto   = true
strip = "symbols"
